--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -115,28 +115,48 @@
 <!--- FAQ --->
 
 <div class="line"></div>
- <span style="text-align: center; font-size: 2em;"> Frequently Asked Question And Answer</span> <br>
-  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: What is the purpose of the AI code generator?</strong></span> <br>
-  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Our AI code generator is designed to assist users in quickly and effortlessly generating code in various programming languages. It aims to streamline the coding process, reduce errors, and enhance overall efficiency.</span>
-<br> <div class="line"></div> <br>
-  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: How does the AI code generator work?</strong></span> <br>
-  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Our AI code generator utilizes advanced machine learning algorithms to analyze user input and generate corresponding code snippets. It learns from a diverse set of examples, allowing it to provide accurate and context-aware code suggestions.</span><br> 
-  <div class="line"></div> <br>
-  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Is the generated code error-free?</strong></span> <br>
-  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: While our AI code generator aims to minimize errors, it's essential to review the generated code for accuracy and relevance to your specific requirements. Users should conduct thorough testing to ensure the desired functionality.</span><br> 
-  <div class="line"></div> <br>
-  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: In which programming languages does the code generator support?</strong></span> <br>
-  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Our code generator supports a wide range of programming languages, including but not limited to Python, JavaScript, Java, C++, and more. We continuously update and expand language support based on user feedback and industry trends.</span><br> 
-  <div class="line"></div> <br>
-  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Is the AI code generator free to use?</strong></span> <br>
-  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Yes, our AI code generator is completely free for all users. We believe in providing accessible tools to the programming community to enhance the coding experience for developers of all skill levels.</span><br> 
-  <div class="line"></div> <br>
-  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Can I integrate the generated code into my projects?</strong></span> <br>
-  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Absolutely! The generated code is intended for use in your projects. Our system supports seamless integration, allowing you to enhance your code with new features and functionalities.</span><br> 
-  <div class="line"></div> <br>
-  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question:  Is my data secure when using the AI code generator?</strong></span> <br>
-  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: We prioritize the security and privacy of user data. The code generation process is performed locally on our servers, and we do not store any sensitive or personal information.</span><br> 
-  <div class="line"></div> <br>
+<span style="text-align: center; font-size: 2em;">Frequently Asked Questions And Answers</span><br>
+
+<div class="line"></div> <br>
+
+<span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Do I need to create an account to use your email sender?</strong></span> <br>
+<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: No, you don't need to create an account or log in to send emails.</span><br>
+
+<div class="line"></div> <br>
+
+<span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Is there a limit on how many emails I can send?</strong></span> <br>
+<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: You can send unlimited emails for free!</span><br>
+
+<div class="line"></div> <br>
+
+<span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Can I send both text and HTML emails?</strong></span> <br>
+<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Yes, you can choose to send either text or HTML emails.</span><br>
+
+<div class="line"></div> <br>
+
+<span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: How secure is your service?</strong></span> <br>
+<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: We take security seriously and implement various measures to protect your data. However, please note that no online service is foolproof.</span><br>
+
+<div class="line"></div> <br>
+
+<span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Is there an API for developers?</strong></span> <br>
+<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Yes, we have an API that you can use to integrate the email sending functionality into your projects.</span><br>
+
+<div class="line"></div> <br>
+
+<span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: What information do I need to send an email?</strong></span> <br>
+<span style="size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: You'll need the recipient's email address, a subject line, and the email content.</span><br>
+
+<div class="line"></div> <br>
+
+<span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Can I attach files to my emails?</strong></span> <br>
+<span style="size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Unfortunately, attaching files is not currently supported.</span><br>
+
+<div class="line"></div> <br>
+
+<span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Can I personalize my emails?</strong></span> <br>
+<span style="size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: You can add
+ <div class="line"></div> <br>
  
   <footer id="footer" style="background-color: #333; color: #fff; text-align: center; padding: 10px; bottom: 0; width: 100%;">
         <p>&copy; 2023 Your Website. All rights reserved.</p>
