--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -110,7 +110,7 @@
 <div id="editor" style="width: 90%; margin: 0 auto; height: 70%;" class="ace_dark ace-rk"></div>
 
 
-<h2>Our Email Sender UI tool helps you to send emails for free without creating or linking your mail account, and you can also send html templates using our tool, you can use this tool in many purposes like you can use our <a href="https://rapidapi.com/sujoyk211/api/mail-sender-api1/" target="_blank">Email Sender API</a> to send emails messages through your project for login otp send or somthing;</h2>
+<h2>Our Email Sender UI tool helps you to send emails for free without creating or linking your mail account, and you can also send html templates using our tool, you can use this tool in many purposes like you can use our <a href="https://rapidapi.com/sujoyk211/api/mail-sender-api1/" target="_blank" style="color: white; text-decoration: underline;">Email Sender API</a> to send emails messages through your project for login otp send or somthing;</h2>
 
 <!--- FAQ --->
 
@@ -120,7 +120,7 @@
 <div class="line"></div> <br>
 
 <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Do I need to create an account to use your email sender?</strong></span> <br>
-<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: No, you don't need to create an account or log in to send emails.</span><br>
+<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: No, you don't need to create an account or log in to send emails while using our tool to send emails.</span><br>
 
 <div class="line"></div> <br>
 
@@ -140,22 +140,13 @@
 <div class="line"></div> <br>
 
 <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Is there an API for developers?</strong></span> <br>
-<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Yes, we have an API that you can use to integrate the email sending functionality into your projects.</span><br>
+<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Yes, we have an API that you can use to integrate the email sending functionality into your projects.  API link => <a href="https://rapidapi.com/sujoyk211/api/mail-sender-api1/" target="_blank" style="color: white; text-decoration: underline;">Click Here</a></span><br>
 
 <div class="line"></div> <br>
 
 <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: What information do I need to send an email?</strong></span> <br>
-<span style="size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: You'll need the recipient's email address, a subject line, and the email content.</span><br>
+<span style="size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: You'll need the recipient's email address, a subject line, and the email content, and the free API key which you can get from <a href="https://rapidapi.com/sujoyk211/api/mail-sender-api1/" target="_blank" style="color: white; text-decoration: underline;">Mail Sender API Rapid API<a></a>.</span><br>
 
-<div class="line"></div> <br>
-
-<span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Can I attach files to my emails?</strong></span> <br>
-<span style="size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Unfortunately, attaching files is not currently supported.</span><br>
-
-<div class="line"></div> <br>
-
-<span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Can I personalize my emails?</strong></span> <br>
-<span style="size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: You can add
  <div class="line"></div> <br>
  
   <footer id="footer" style="background-color: #333; color: #fff; text-align: center; padding: 10px; bottom: 0; width: 100%;">
