--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -125,7 +125,7 @@
 <div class="line"></div> <br>
 
 <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Is there a limit on how many emails I can send?</strong></span> <br>
-<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: You can send unlimited emails for free!</span><br>
+<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: You can send unlimited emails for free! by using our tool</span><br>
 
 <div class="line"></div> <br>
 
