--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -119,6 +119,11 @@
 
 <div class="line"></div> <br>
 
+  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: How to send html and text email message from my project?</strong></span> <br>
+<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Use out <a href="https://rapidapi.com/sujoyk211/api/mail-sender-api1/" target="_blank" style="color: white; text-decoration: underline;">Email Sender API</a> To send unlimited Html and text Emails for free from your project or backend server securely without having delay.</span><br>
+
+<div class="line"></div> <br>
+  
 <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Do I need to create an account to use your email sender?</strong></span> <br>
 <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: No, you don't need to create an account or log in to send emails while using our tool to send emails.</span><br>
 
