--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -150,7 +150,7 @@
 <div class="line"></div> <br>
 
 <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: What information do I need to send an email?</strong></span> <br>
-<span style="size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: You'll need the recipient's email address, a subject line, and the email content, and the free API key which you can get from <a href="https://rapidapi.com/sujoyk211/api/mail-sender-api1/" target="_blank" style="color: white; text-decoration: underline;">Mail Sender API Rapid API<a></a>.</span><br>
+<span style="size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: You'll need the recipient's email address, a subject line, and the email content, and the free API key which you can get from <a href="https://rapidapi.com/sujoyk211/api/mail-sender-api1/" target="_blank" style="color: white; text-decoration: underline;">Mail Sender API Rapid API</a>.</span><br>
 
  <div class="line"></div> <br>
  
