--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -101,7 +101,7 @@
 </div>
   
   <div style="width: 100%; text-align: center; border: 0.5px solid white; border-radius: 5px;">
-<h1>Email Sender Tool | Send Email To Anyone, Anytime, Anywhere without delay and no email accounts or access required and both html and text emails are supported</h1>
+<h1>Email Sender Tool | Send Email To Anyone, Anytime, Anywhere without delay and no email accounts or access required and both html and text emails are supported <br> <a href="https://rapidapi.com/sujoyk211/api/mail-sender-api1/" target="_blank" style="color: white; text-decoration: underline;"> MAIL SENDER API LINK,</a></h1>
   </div> 
  <span style="text-align: center; align-items: center; font-size: 4em;"><span class="gold-badge" style="margin-left: 10px;">Trending</span><span class="pink-badge" style="margin-left: 10px;">Free</span></span>
  
