--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -106,9 +106,10 @@
  <span style="text-align: center; align-items: center; font-size: 4em;"><span class="gold-badge" style="margin-left: 10px;">Trending</span><span class="pink-badge" style="margin-left: 10px;">Free</span></span>
  
 <div class="line"></div>
+<div style="width: 100%; align-items: center; flex-direction: column; display: flex;">
 
-<textarea maxlength="50" placeholder="Telling About A Story" id="prompt_title" style="margin-top: 4px; width: 90%; height: 60px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 16px; outline: none; margin: 0 auto;"></textarea>
-
+<textarea maxlength="50" placeholder="Telling About A Story" id="prompt_title" style="margin-top: 4px; width: 90%; height: 60px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 16px; outline: none;"></textarea>
+</div>
   <div style="margin-top: 5px; margin-bottom: 5px;" class="line"></div>
 
 <h2>Our Email Sender UI tool helps you to send emails for free without creating or linking your mail account, and you can also send html templates using our tool, you can use this tool in many purposes like you can use our <a href="https://rapidapi.com/sujoyk211/api/mail-sender-api1/" target="_blank" style="color: white; text-decoration: underline;">Email Sender API</a> to send emails messages through your project for login otp send or somthing;</h2>
