--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@ The platform automatically detects the source language and offers autocorrection
   
 <footer id="footer" style="background-color: #333; color: #fff; text-align: center; padding: 10px; bottom: 0; width: 100%;">
         <p>&copy; 2023 Your Website. All rights reserved.</p>
-   <a href="/privacy-policy" style="color: #fff; font-size: 20px;">Privacy Policy</a> <br>
-  <a href="/about-us" style="color: #fff;">About Us</a> <br>
-  <a href="/contact-us" style="color: #fff;">Contact Us</a> <br>
+   <a href="/privacy-policy" style="color: #fff; font-size: 18px;">Privacy Policy</a> <br>
+  <a href="/about-us" style="color: #fff; font-size: 18px;">About Us</a> <br>
+  <a href="/contact-us" style="color: #fff; font-size: 18px;">Contact Us</a> <br>
        </footer>
 </body>
 </html>
