--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>🔧 Tool Sphere • All Types Of Online Free Tools In One Place</title>
+  <meta name="description" content="We Provide Free Online Tools Devlopers and Students All Tools Are Free To use and we provide API for all Tools 🔥" />
   <meta name="keywords" content="online tools, text translation, AI code generator, email sending tool, programming, web development, productivity tools, language translation, code automation, email marketing, free tools", automatic code creation, education tools, online tools, free online tools, ghost writer ai, free code generator ai, translate, text translation, translator ai, email sender, send email online, without any api key">
   <link href="/css/landing-style.css" rel="stylesheet" type="text/css" />
     <link href="/css/badge.css" rel="stylesheet" type="text/css" />
@@ -72,9 +73,9 @@ The platform automatically detects the source language and offers autocorrection
   
 <footer id="footer" style="background-color: #333; color: #fff; text-align: center; padding: 10px; bottom: 0; width: 100%;">
         <p>&copy; 2023 Your Website. All rights reserved.</p>
-   <a href="/privacy-policy" style="color: #fff; font-size: 18px;">Privacy Policy</a> <br>
-  <a href="/about-us" style="color: #fff; font-size: 18px;">About Us</a> <br>
-  <a href="/contact-us" style="color: #fff; font-size: 18px;">Contact Us</a> <br>
+   <a href="/privacy-policy" style="color: #fff;">Privacy Policy</a> <br>
+  <a href="/about-us" style="color: #fff; margin-top: 5px;">About Us</a> <br>
+  <a href="/contact-us" style="color: #fff; margin-top: 5px;">Contact Us</a> <br>
        </footer>
 </body>
 </html>
