--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@ The platform automatically detects the source language and offers autocorrection
 <footer id="footer" style="background-color: #333; color: #fff; text-align: center; padding: 10px; bottom: 0; width: 100%;">
         <p>&copy; 2023 Your Website. All rights reserved.</p>
    <a href="/privacy-policy" style="color: #fff;">Privacy Policy</a> <br> <br>
-  <a href="/about-us" style="color: #fff; margin-top: 20px;">About Us</a> <br> <br>
-  <a href="/contact-us" style="color: #fff; margin-top: 20px;">Contact Us</a> <br> <br>
+  <a href="/about-us" style="color: #fff;">About Us</a> <br> <br>
+  <a href="/contact-us" style="color: #fff;">Contact Us</a> <br> <br>
        </footer>
 </body>
 </html>
