--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -101,7 +101,7 @@
 </div>
   
   <div style="width: 100%; text-align: center; border: 0.5px solid white; border-radius: 5px;">
-<h1>Email Sender Tool | Send Email To Anyone, Anytime, Anywhere without delay and no email accounts or access required and both html and text emails are supported <br> <a href="https://rapidapi.com/sujoyk211/api/mail-sender-api1/" target="_blank" style="color: white; text-decoration: underline;"> MAIL SENDER API LINK,</a></h1>
+<h1>Email Sender Tool | Send Email To Anyone, Anytime, Anywhere without delay and no email accounts or access required and both html and text emails are supported <br> <a href="https://rapidapi.com/sujoyk211/api/mail-sender-api1/" target="_blank" style="color: gold; text-decoration: underline;"> MAIL SENDER API LINK,</a></h1>
   </div> 
  <span style="text-align: center; align-items: center; font-size: 4em;"><span class="gold-badge" style="margin-left: 10px;">Trending</span><span class="pink-badge" style="margin-left: 10px;">Free</span></span>
  
@@ -112,7 +112,7 @@
 </div>
   <div style="margin-top: 5px; margin-bottom: 5px;" class="line"></div>
 
-<h2>Our Email Sender UI tool helps you to send emails for free without creating or linking your mail account, and you can also send html templates using our tool, you can use this tool in many purposes like you can use our <a href="https://rapidapi.com/sujoyk211/api/mail-sender-api1/" target="_blank" style="color: white; text-decoration: underline;">Email Sender API</a> to send emails messages through your project for login otp send or somthing;</h2>
+<h2>Our Email Sender UI tool helps you to send emails for free without creating or linking your mail account, and you can also send html templates using our tool, you can use this tool in many purposes like you can use our <a href="https://rapidapi.com/sujoyk211/api/mail-sender-api1/" target="_blank" style="color: gold; text-decoration: underline;">Email Sender API</a> to send emails messages through your project for login otp send or somthing;</h2>
 
 <!--- FAQ --->
 
@@ -122,7 +122,7 @@
 <div class="line"></div> <br>
 
   <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: How to send html and text email message from my project?</strong></span> <br>
-<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Use out <a href="https://rapidapi.com/sujoyk211/api/mail-sender-api1/" target="_blank" style="color: white; text-decoration: underline;">Email Sender API</a> To send unlimited Html and text Emails for free from your project or backend server securely without having delay.</span><br>
+<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Use out <a href="https://rapidapi.com/sujoyk211/api/mail-sender-api1/" target="_blank" style="color: gold; text-decoration: underline;">Email Sender API</a> To send unlimited Html and text Emails for free from your project or backend server securely without having delay.</span><br>
 
 <div class="line"></div> <br>
   
@@ -147,12 +147,12 @@
 <div class="line"></div> <br>
 
 <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Is there an API for developers?</strong></span> <br>
-<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Yes, we have an API that you can use to integrate the email sending functionality into your projects.  API link => <a href="https://rapidapi.com/sujoyk211/api/mail-sender-api1/" target="_blank" style="color: white; text-decoration: underline;">Click Here</a></span><br>
+<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Yes, we have an API that you can use to integrate the email sending functionality into your projects.  API link => <a href="https://rapidapi.com/sujoyk211/api/mail-sender-api1/" target="_blank" style="color: gold; text-decoration: underline;">Click Here</a></span><br>
 
 <div class="line"></div> <br>
 
 <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: What information do I need to send an email?</strong></span> <br>
-<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: You'll need the recipient's email address, a subject line, and the email content, and the free API key which you can get from <a href="https://rapidapi.com/sujoyk211/api/mail-sender-api1/" target="_blank" style="color: white; text-decoration: underline;">Mail Sender API Rapid API</a>.</span><br>
+<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: You'll need the recipient's email address, a subject line, and the email content, and the free API key which you can get from <a href="https://rapidapi.com/sujoyk211/api/mail-sender-api1/" target="_blank" style="color: gold; text-decoration: underline;">Mail Sender API Rapid API</a>.</span><br>
 
  <div class="line"></div> <br>
  
