--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -147,7 +147,7 @@
 <div class="line"></div> <br>
 
 <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Is there an API for developers?</strong></span> <br>
-<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Yes, we have an API that you can use to integrate the email sending functionality into your projects.  API link => <a href="https://rapidapi.com/sujoyk211/api/mail-sender-api1/" target="_blank" style="color: gold; text-decoration: underline;">Click Here</a></span><br>
+<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Yes, we have an API that you can use to integrate the email sending functionality into your projects <a href="https://rapidapi.com/sujoyk211/api/mail-sender-api1/" target="_blank" style="color: gold; text-decoration: underline;">Mail Sender API link</a></span><br>
 
 <div class="line"></div> <br>
 
