--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -18,7 +18,7 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="msapplication-config" content="/icons/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
-  <link rel="canonical" href="https://tool-sphere.github.io/" />
+  <link rel="canonical" href="https://tool-sphere.github.io" />
 <style>
   .loading {
   height: 50px;
