--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Free Email Sender : Send Email message to anyone without login both html and text emails are supported</title>
+  <link rel="canonical" href="https://tool-sphere.github.io/" />
   <meta name="description" content="Explore our AI-powered code generator – a revolutionary tool for effortless code creation in multiple programming languages. Enhance your coding experience with error-free snippets, streamlined development, and increased productivity. Try our free online code generation tool today!">
  <meta name="keywords" content="email sender, unlimited emails free, no login email sender, send emails without account, free email API, bulk email sender, HTML email sender, text email sender, developer email sender, unlimited email API, no login email API, customer notifications, transactional emails, marketing emails, simple email API, user-friendly email sender, Free email sending, Unlimited email sending, HTML and text email support, No login required, No email account required, Hassle-free email delivery, Easy email sending, Email without sign-up, Quick email service, Email without registration, Simple email sending, Instant email delivery, Effortless email sending">
   <link href="/css/landing-style.css" rel="stylesheet" type="text/css" />
@@ -18,7 +19,6 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="msapplication-config" content="/icons/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
-  <link rel="canonical" href="https://tool-sphere.github.io" />
 <style>
   .loading {
   height: 50px;
