--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -156,8 +156,8 @@
 
  <div class="line"></div> <br>
  
-  <footer id="footer" style="background-color: #333; color: #fff; text-align: center; padding: 10px; bottom: 0; width: 100%;">
-        <p>&copy; 2023 Your Website. All rights reserved.</p>
+<footer id="footer" style="background-color: #333; color: #fff; text-align: center; padding: 10px; bottom: 0; width: 100%;">
+        <p>&copy; 2024 prize-pulse. All rights reserved.</p>
   <a href="/privacy-policy" style="color: #fff;">Privacy Policy</a> <br>
   <a href="/about-us" style="color: #fff;">About Us</a> <br>
   <a href="/contact-us" style="color: #fff;">Contact Us</a> <br>
