--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -107,7 +107,7 @@
  
 <div class="line"></div>
 <div style="width: 100%; align-items: center; flex-direction: column; display: flex;">
-
+<span style="margin-top: 12px; margin-left: 5px; margin-bottom: 3px;">Send To: </span>
 <textarea maxlength="50" placeholder="Telling About A Story" id="prompt_title" style="margin-top: 4px; width: 90%; height: 60px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 16px; outline: none;"></textarea>
 </div>
   <div style="margin-top: 5px; margin-bottom: 5px;" class="line"></div>
