--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -107,7 +107,7 @@
  
 <div class="line"></div>
 <div style="width: 100%; align-items: center; flex-direction: column; display: flex;">
-<span style="margin-top: 12px; margin-left: 5px; margin-bottom: 3px;">Send To: </span>
+<span style="margin-top: 12px; margin-left: 5px; margin-bottom: 3px; font-size: 20px;">Send To: </span>
 <textarea maxlength="50" placeholder="Telling About A Story" id="prompt_title" style="margin-top: 4px; width: 90%; height: 60px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 16px; outline: none;"></textarea>
 </div>
   <div style="margin-top: 5px; margin-bottom: 5px;" class="line"></div>
@@ -157,7 +157,7 @@
  <div class="line"></div> <br>
  
 <footer id="footer" style="background-color: #333; color: #fff; text-align: center; padding: 10px; bottom: 0; width: 100%;">
-        <p>&copy; 2024 prize-pulse. All rights reserved.</p>
+        <p>&copy; 2024 tool-sphere. All rights reserved.</p>
   <a href="/privacy-policy" style="color: #fff;">Privacy Policy</a> <br>
   <a href="/about-us" style="color: #fff;">About Us</a> <br>
   <a href="/contact-us" style="color: #fff;">Contact Us</a> <br>
