--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -107,8 +107,17 @@
  
 <div class="line"></div>
 <div style="width: 100%; align-items: center; flex-direction: column; display: flex;">
-<span style="margin-top: 22px; margin-bottom: 5px; font-size: 20px;">Send To: </span>
-<textarea maxlength="50" placeholder="send.to@email.com" id="sendto" style="margin-top: 4px; width: 90%; height: 60px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 16px; outline: none;"></textarea>
+
+  <span style="margin-top: 22px; margin-bottom: 5px; font-size: 20px;">Send To: </span>
+  <textarea maxlength="50" placeholder="send.to@email.com" id="sendto" style="margin-top: 4px; width: 90%; height: 30px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 16px; outline: none;"></textarea>
+<br>
+  <span style="margin-top: 12px; margin-bottom: 5px; font-size: 20px;">Title: </span>
+  <textarea maxlength="50" placeholder="Tool Sphere Mail Sender Test" id="title" style="margin-top: 4px; width: 90%; height: 50px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 16px; outline: none;"></textarea>
+<br>
+  <span style="margin-top: 10px; margin-bottom: 5px; font-size: 20px;">Body: </span>
+  <textarea maxlength="50" placeholder="This Email Was Sent By <a herf=''></a>" id="body" style="margin-top: 4px; width: 90%; height: 30px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 16px; outline: none;"></textarea>
+  <br>
+  
 </div>
   <div style="margin-top: 5px; margin-bottom: 5px;" class="line"></div>
 
