--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -115,7 +115,7 @@
   <textarea maxlength="50" placeholder="Tool Sphere Mail Sender Test" id="title" style="margin-top: 4px; width: 90%; height: 50px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 16px; outline: none;"></textarea>
 <br>
   <span style="margin-top: 10px; margin-bottom: 5px; font-size: 20px;">Body: </span>
-  <textarea maxlength="2000" placeholder="This Email Was Sent By <a herf=''></a>" id="body" style="margin-top: 4px; width: 90%; height: 140px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 16px; outline: none;"></textarea>
+  <textarea maxlength="2000" placeholder="This Email Was Sent Using <a herf='https://tool-sphere.github.io/tools/email-sender/'>Tool Sphere</a>" id="body" style="margin-top: 4px; width: 90%; height: 140px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 16px; outline: none;"></textarea>
   <br>
   
 </div>
