--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -6,7 +6,9 @@
   <meta name="viewport" content="width=device-width">
   <title>Free Email Sender : Send Email message to anyone without login both html and text emails are supported</title>
   <link rel="canonical" href="https://tool-sphere.github.io/" />
-  <meta name="description" content="Explore our AI-powered code generator – a revolutionary tool for effortless code creation in multiple programming languages. Enhance your coding experience with error-free snippets, streamlined development, and increased productivity. Try our free online code generation tool today!">
+  <meta name="description" content="Discover the power of our free Email Sender Tool, facilitating effortless communication with unlimited email sending in both HTML and text formats. Our user-friendly interface ensures an excellent experience, removing communication restrictions.
+
+Additionally, harness the full potential of our tool with an integrated API, seamlessly incorporating it into your projects. Effortlessly send unlimited emails, toggle between HTML and text formats, and benefit from a user-friendly interface for enhanced communication capabilities. Elevate your messaging with the perfect blend of accessibility and versatility.">
  <meta name="keywords" content="email sender, unlimited emails free, no login email sender, send emails without account, free email API, bulk email sender, HTML email sender, text email sender, developer email sender, unlimited email API, no login email API, customer notifications, transactional emails, marketing emails, simple email API, user-friendly email sender, Free email sending, Unlimited email sending, HTML and text email support, No login required, No email account required, Hassle-free email delivery, Easy email sending, Email without sign-up, Quick email service, Email without registration, Simple email sending, Instant email delivery, Effortless email sending">
   <link href="/css/landing-style.css" rel="stylesheet" type="text/css" />
     <link href="/css/badge.css" rel="stylesheet" type="text/css" />
