--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -119,7 +119,14 @@ Additionally, harness the full potential of our tool with an integrated API, sea
   <span style="margin-top: 10px; margin-bottom: 5px; font-size: 20px;">Body: </span>
   <textarea maxlength="2000" placeholder="This Email Was Sent Using <a herf='https://tool-sphere.github.io/tools/email-sender/'>Tool Sphere</a>" id="body" style="margin-top: 4px; width: 90%; height: 140px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 16px; outline: none;"></textarea>
   <br>
+<form id="format_type">
+  <label for="type_txt">Text</label>
+<input type="radio" id="type_txt" name="text" value="text">
+  <br>
+  <label for="type_html">Option 1</label>
+<input type="radio" id="type_html" name="html" value="html">
   
+</form>
 </div>
   <div style="margin-top: 5px; margin-bottom: 5px;" class="line"></div>
 
