--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -121,9 +121,9 @@ Additionally, harness the full potential of our tool with an integrated API, sea
   <br>
 <form id="format_type">
   <label for="type_txt">Text</label>
-<input type="radio" id="type_txt" name="text" value="text">
+<input type="radio" id="type_txt" name="text" value="text" checked>
   <br>
-  <label for="type_html">Option 1</label>
+  <label for="type_html">HTML</label>
 <input type="radio" id="type_html" name="html" value="html">
   
 </form>
