--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -119,11 +119,13 @@ Additionally, harness the full potential of our tool with an integrated API, sea
   <span style="margin-top: 10px; margin-bottom: 5px; font-size: 20px;">Body: </span>
   <textarea maxlength="2000" placeholder="This Email Was Sent Using <a herf='https://tool-sphere.github.io/tools/email-sender/'>Tool Sphere</a>" id="body" style="margin-top: 4px; width: 90%; height: 140px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 16px; outline: none;"></textarea>
   <br>
-<form id="format_type">
-<input type="radio" id="type_txt" name="text" value="text" checked>
+  
+ <span style="margin-top: 10px; margin-bottom: 5px; font-size: 20px;">Format Type: </span>
+ <form id="format_type">
+<input type="radio" id="type_txt" name="toption" value="text" style="background-color: #00fc2a;" checked>
   <label for="type_txt">Text</label>
   <br>
-  <input type="radio" id="type_html" name="html" value="html">
+  <input type="radio" id="type_html" name="toption" value="html" style="background-color: #00fc2a;">
   
   <label for="type_html">HTML</label>
   
