--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -71,6 +71,9 @@ Additionally, harness the full potential of our tool with an integrated API, sea
   }
 }
   }
+  input[type="radio"]:checked + label {
+      background-color: #00fc2a; 
+  }
 </style>
 </head>
 
