--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -72,7 +72,7 @@ Additionally, harness the full potential of our tool with an integrated API, sea
 }
   }
   input[type="radio"]:checked {
-      background-color: #00fc2a; 
+      accent-color: #00fc2a; 
   }
 </style>
 </head>
