--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -125,12 +125,12 @@ Additionally, harness the full potential of our tool with an integrated API, sea
   
  <span style="margin-top: 10px; margin-bottom: 5px; font-size: 20px;">Format Type: </span>
  <form id="format_type">
-<input type="radio" id="type_txt" name="toption" value="text" style="background-color: #00fc2a;" checked>
-  <label for="type_txt">Text</label>
+<input type="radio" id="type_txt" name="toption" value="text" checked>
+  <label for="type_txt" style="font-size: 18px;">Text</label>
   <br>
-  <input type="radio" id="type_html" name="toption" value="html" style="background-color: #00fc2a;">
+  <input type="radio" id="type_html" name="toption" value="html">
   
-  <label for="type_html">HTML</label>
+  <label for="type_html"  style="font-size: 18px;">HTML</label>
   
 </form>
 </div>
