--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -70,6 +70,10 @@ Additionally, harness the full potential of our tool with an integrated API, sea
         background-color: cyan;  /*cyan*/
   }
 }
+  input[type="radio"] {
+background-color: transparent;
+border-color: gold;
+  }
   input[type="radio"]:checked {
       accent-color: #00fc2a; 
   }
