--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -75,7 +75,9 @@ background-color: transparent;
 border-color: gold;
   }
   input[type="radio"]:checked {
-      accent-color: #00fc2a; 
+      accent-color: #00fc2a;
+    background-color: transparent;
+border-color: gold;
   }
 </style>
 </head>
