--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -71,8 +71,8 @@ Additionally, harness the full potential of our tool with an integrated API, sea
   }
 }
   input[type="radio"] {
-background-color: transparent;
-border-color: gold;
+background-color: rgba(255, 255, 255, 0.7); /* transparent white */
+  border-color: gold;
   }
   input[type="radio"]:checked {
       accent-color: #00fc2a;
