--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -136,8 +136,12 @@ border-color: gold;
   <input type="radio" id="type_html" name="toption" value="html">
   
   <label for="type_html"  style="font-size: 18px;">HTML</label>
+  </form>
+<br>
+  <span style="margin-top: 10px; margin-bottom: 5px; font-size: 20px;">API Key: <a target="_blank" href="https://rapidapi.com/sujoyk211/api/mail-sender-api1/"></a>Click To get API key fir free</a></span>
+   <textarea maxlength="100" placeholder="YourSuperSecretAPIKeyDontShare'>Tool Sphere</a>" id="apikey" style="margin-top: 4px; width: 90%; height: 140px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 16px; outline: none;"></textarea>
+<br>
   
-</form>
 </div>
   <div style="margin-top: 5px; margin-bottom: 5px;" class="line"></div>
 
