--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -138,8 +138,8 @@ border-color: gold;
   <label for="type_html"  style="font-size: 18px;">HTML</label>
   </form>
 <br>
-  <span style="margin-top: 10px; margin-bottom: 5px; font-size: 20px;">API Key: <a target="_blank" href="https://rapidapi.com/sujoyk211/api/mail-sender-api1/"></a>Click To get API key fir free</a></span>
-   <textarea maxlength="100" placeholder="YourSuperSecretAPIKeyDontShare'>Tool Sphere</a>" id="apikey" style="margin-top: 4px; width: 90%; height: 140px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 16px; outline: none;"></textarea>
+  <span style="margin-top: 10px; margin-bottom: 5px; font-size: 20px;">API Key: <a target="_blank" href="https://rapidapi.com/sujoyk211/api/mail-sender-api1/" style="font-size: 12px; color: gold;">Click To get API key fir free</a></span>
+   <textarea maxlength="100" placeholder="YourSuperSecretAPIKeyDontShare" id="apikey" style="margin-top: 4px; width: 90%; height: 140px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 16px; outline: none;"></textarea>
 <br>
   
 </div>
