--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -96,16 +96,19 @@ border-color: gold;
   cursor: pointer;
   user-select: none;
   -webkit-user-select: none;
-  touch-action: none /*manipulation*/;
+  touch-action: manipulation;
+  outline: none;
 }
 
 .button-88:hover {
   box-shadow: 0 0.5em 1.5em -0.5em #14a73e98;
+  outline: none;
 }
 
 .button-88:active {
   box-shadow: 0 0.3em 1em -0.5em #14a73e98;
-  }
+  outline: none;
+}
 </style>
 </head>
 
