--- a/tools/email-sender/index.html
+++ b/tools/email-sender/index.html
@@ -80,6 +80,7 @@ background-color: rgba(255, 255, 255, 0.7); /* transparent white */
 border-color: gold;
   }
 .button-88 {
+  -webkit-tap-highlight-color: transparent;
   display: flex;
   align-items: center;
   font-family: inherit;
